.xmonad/xmonad.errors
$ /home/romaha/.xmonad/build /home/romaha/.xmonad/xmonad-x86_64-freebsd

config.hs:394:21: error:
    Variable not in scope:
      docks
        :: XConfig
             (ModifiedLayout
                ShowWName
                (ModifiedLayout
                   XMonad.Hooks.ManageDocks.AvoidStruts
                   (ModifiedLayout
                      MouseResize
                      (ModifiedLayout
                         XMonad.Layout.WindowArranger.WindowArranger
                         (XMonad.Layout.MultiToggle.MultiToggle
                            (XMonad.Layout.MultiToggle.HCons
                               StdTransformers
                               (XMonad.Layout.MultiToggle.HCons StdTransformers EOT))
                            (Choose
                               (ModifiedLayout
                                  WithBorder
                                  (ModifiedLayout
                                     Rename
                                     (ModifiedLayout
                                        SmartBorder
                                        (ModifiedLayout
                                           (XMonad.Layout.Decoration.Decoration
                                              TabbedDecoration
                                              XMonad.Layout.Decoration.DefaultShrinker)
                                           (ModifiedLayout
                                              (Sublayout (ModifiedLayout SmartBorder Simplest))
                                              (ModifiedLayout
                                                 XMonad.Layout.LimitWindows.LimitWindows
                                                 (ModifiedLayout Spacing ResizableTall)))))))
                               (ModifiedLayout
                                  WithBorder
                                  (ModifiedLayout
                                     Rename
                                     (ModifiedLayout
                                        (XMonad.Layout.Decoration.Decoration
                                           TabbedDecoration
                                           XMonad.Layout.Decoration.DefaultShrinker)
                                        Simplest)))))))))
           -> XConfig l0
    Suggested fix:
      Perhaps you want to add ‘docks’ to the import list in the import of
      ‘XMonad.Hooks.ManageDocks’ (config.hs:35:1-92).
    |
394 |     xmonad $ ewmh . docks $ def
    |                     ^^^^^
Error: cabal: Failed to build exe:xmonad-config from xmonad-config-0.0.

